feat: add configurable health checks
